--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.toprightcorner{
+    position:absolute;
+    top: 10px;;
+    right:50px;
+   }
+
+.topleftcorner{
+position:static;
+top: 10px;;
+left:50px;
+}
+
+
