--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,27 +1,46 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Projects</h1>
+<div class="container-fluid">
+<div style="display:flex; flex-direction: row;">
+   <div class="topleftcorner"><h2>Listing Projects<h2></div>
+   <div class="toprightcorner"><%= link_to new_project_path, :class => "btn btn-outline-dark" do %>
+	<i class="fa fa-plus"></i> New Project
+<% end %></div>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% if @projects.length == 0 %>
+	<div class="alert alert-warning">No projects registered</div>
+<% else %>
+	<table class="table table-bordered table-striped">
+	  <thead>
+		<tr>
+		  <th scope="col"><%= "name" %></th>
+		  <th scope="col"><%= "No of Tasks" %></th>
+		  <th scope="col" class="col-actions">Actions</th>
+		</tr>
+	  </thead>
+	  <tbody>
+		<% @projects.each do |project| %>
+		  <tr>
+			<td><%= project.name %></td>
+			<td><%= project.tasks.count %></td>
+			<td class="text-center">
+				<%= link_to project, :class => "btn btn-info" do %>
+					<i class="fa fa-eye"></i> Show
+				<% end %>
+				<%= link_to edit_project_path(project), :class => "btn btn-primary" do %>
+					<i class="fa fa-edit"></i> Edit
+				<% end %>
+				<%= link_to project, method: :delete, data: { confirm: "Are you sure you want to remove?" }, :class => "btn btn-danger" do %>
+					<i class="fa fa-trash"></i> Delete
+				<% end %>
+			</td>
+		  </tr>
+		<% end %>
+	  </tbody>
+	</table>
+<% end %>
 
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+<div class="d-flex justify-content-center">
+  <%= paginate @projects %>
+</div>
