style all pages

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,17 +1,28 @@
 <%= form_for @project do |f| %>
+ <div class="container">
   <div class="field">
-    <%= f.label :name %>
-    <br/>
+    <%= f.label "Project Name" %>
     <%= f.text_field :name %>
   </div>
+  </div>
+  <div class="container border">
   <h3>Tasks</h3>
+  <div class='links'>
+    <button type="button"><%= link_to_add_association 'Add New Task', f, :tasks, partial: 'task_fields' %></button>
+  </div>
+  <br>
+  <br>
   <div id='tasks'>
     <%= f.fields_for :tasks do |task| %>
       <%= render 'task_fields', :f => task %>
     <% end %>
-    <div class='links'>
-      <%= link_to_add_association 'add task', f, :tasks, partial: 'task_fields' %>
-    </div>
   </div>
-  <%= f.submit 'Save' %>
+  </div>
+  <div class="container">
+  <% if params[:id].present? %>
+    <%= f.submit 'Update Project' %>
+  <%else%>
+    <%= f.submit 'Create Project' %>
+  <%end%>
+  </div>
 <% end %>
