--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,8 +22,8 @@
 	  <tbody>
 		<% @projects.each do |project| %>
 		  <tr>
-			<td><%= project.name %></td>
-			<td><%= project.tasks.count %></td>
+			<td style="font-size:18px"><%= project.name %></td>
+			<td style="font-size:18px"><%= project.tasks.count %></td>
 			<td class="text-center">
 				<%= link_to project, :class => "btn btn-info" do %>
 					<i class="fa fa-eye"></i> Show
