--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,11 @@
-<h4><%= @project.name %>Projects</h4>
- 
-<% @tasks.each do |task| %>
- <li><%= task.description %></li>
-<% end %>
+<h4>Project Name: <%= @project.name %></h4>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<h4>Tasks</h4>
+<ul>
+<% @tasks.each do |task| %>
+ <li><h5><%= task.description %></h5></li>
+<% end %>
+</ul>
+
+ <button type="button"> <%= link_to 'Edit', edit_project_path(@project) %> </button>|
+ <button type="button"> <%= link_to 'Back', projects_path %></button>
