--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,7 @@
 
 <h4>Tasks</h4>
 <ul>
-<% @tasks.each do |task| %>
+<% @tasks&.each do |task| %>
  <li><h5><%= task.description %></h5></li>
 <% end %>
 </ul>
